# elijere

./: .gitignore  README.md  build_dares_dataset.py  build_indices.py  explo_outliers.ipynb  pipeline.ipynb  pyproject.toml  requirements.txt  run_pipeline.py  stepByStep_pipeline.ipynb
notebooks/: pipeline.ipynb  semanticannotation.ipynb
projects/Q5/: dict_rel.json  entity_type.json  relation_names.json
projects/Q5/entity_data/Q5/: Q23.json
projects/Q5/whatlinkshere/: Q5-whatlinkshere.json
projects/Q5/wikidatalinks/: Q5-wikidatalinks.json
src/: dares.py  model.py  processor.ipynb  utils.py  wikidataparsing.ipynb
src/elijere/: model.py  processor.py
src/model/: model.py
src/utils/: utils.py
src/wikidataparsing/: wikidataparsing.py
utils/: utils.py
wikidataparsing/: wikidataparsing.py
