[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elijere"
version = "0.0.1"
authors = [
  { name="Nicolas Gutehrlé", email="nicolas.gutehrle@univ-fcomte.fr" },
  { name="Iana Atanassova", email="iana.atanassova@univ-fcomte.fr" },
]
description = "TO COMPLETE"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "annotated-types==0.7.0",
    "babel==2.16.0",
    "beautifulsoup4==4.12.3",
    "blis==1.2.0",
    "bs4==0.0.2",
    "catalogue==2.0.10",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpathlib==0.20.0",
    "confection==0.1.5",
    "contourpy==1.3.1",
    "curated-tokenizers==0.0.9",
    "curated-transformers==0.1.1",
    "cycler==0.12.1",
    "cymem==2.0.11",
    "filelock==3.16.1",
    "fonttools==4.55.3",
    "fsspec==2024.12.0",
    "huggingface-hub==0.27.1",
    "idna==3.10",
    "Jinja2==3.1.5",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "langcodes==3.5.0",
    "language_data==1.3.0",
    "Levenshtein==0.26.1",
    "lxml==5.3.0",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "murmurhash==1.0.12",
    "networkx==3.4.2",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "preshed==3.0.9",
    "protobuf==3.20.3",
    "pydantic==2.10.5",
    "pydantic_core==2.27.2",
    "pyparsing==3.2.1",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "RapidFuzz==3.11.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "sentence-transformers==3.3.1",
    "sentencepiece==0.2.0",
    "setuptools==75.1.0",
    "shellingham==1.5.4",
    "smart-open==7.1.0",
    "soupsieve==2.6",
    "spacy==3.8.4",
    "spacy-curated-transformers==0.3.0",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "spaczz==0.6.1",
    "srsly==2.5.1",
    "sympy==1.13.1",
    "thinc==8.3.4",
    "threadpoolctl==3.5.0",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "tqdm==4.67.1",
    "transformers==4.48.1",
    "typer==0.15.1",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "wheel==0.44.0",
    "wrapt==1.17.2"
]

[project.urls]
Homepage = "https://github.com/nicolasgutehrle/elijere"